# net-programming

./: .gitignore  README.md
envoy/: envoy.yml
envoy/pilot-envoy-example/: Makefile
envoy/pilot-envoy-example/app/: Cargo.toml  build.rs
envoy/pilot-envoy-example/app/proto/: ads.proto
envoy/pilot-envoy-example/app/src/: descriptor.rs  main.rs
envoy/pilot-envoy-example/e2e/serviceA/: Cargo.toml
envoy/pilot-envoy-example/e2e/serviceB/: Cargo.toml
envoy/pilot-envoy-example/e2e/serviceB/src/: main.rs
envoy/pilot-envoy-example/manifests/configs/: envoy.yml
envoy/sidecar-envoy-examples/app/src/: main.rs
envoy/sidecar-envoy-examples/e2e/serviceA/: Cargo.toml
