[package]
name = "pilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
tonic = "0.12.3"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
prost = "0.13.5"
tokio-stream = "0.1.17"
futures = "0.3.31"
tonic-reflection = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
