[package]
name = "serviceA"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.1", features = ["tokio", "http1"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
